--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,17 +1,42 @@
+
+
 <section id = "MeetThePod">
     <h2>Meet the Pod</h2>
-    <div class="card-container" >
+    <div class="pod">
+        <div class="conatiner"> 
+          <div class="row">
     {% for item in site.data.fellows %}
+  
+   
+      <div class="column">
     <div class="card">
-        <div class="info">
-            <p class="title"> {{ item.name }}</p>
-            <p class="location"> {{ item.location }}</p>
-            <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
-            <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
-            <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
-            <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
+      <div class="content">
+        <div class="front">
+          <img class="profile" width="100%" src= "{{ item.img }}" >
+          <h2>{{ item.name }}</h2>
         </div>
+        <div class="back from-left">
+          <h2>{{ item.name }}</h2>
+          <p> {{ item.location }}</p>
+          <br>
+          <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
+          <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
+          <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
+          <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
+            <br>
+            <br>
+          <button> Github </button>
+        </div>
+      </div>
     </div>
+  </div>
+
+
     {% endfor %}
+  </div>
+</div>
 </div>
 </section>
+
+ 
+  
