adding github link

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -25,7 +25,7 @@
           <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
             <br>
             <br>
-          <button> Github </button>
+         <a href="{{ item.social.github }}"><button> Github </button></a> 
         </div>
       </div>
     </div>
