--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,17 +1,19 @@
-<section>
-    <h2 id="pod">Meet the Pod</h2>
-    <div class="card-container">
-        {% for item in site.data.fellows %}
-        <div class="card">
-            <div class="info">
-                <p class="title"> {{ item.name }}</p>
-                <p class="location"> {{ item.location }}</p>
-                <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
-                <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
-                <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
-                <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
-            </div>
+<section id = "MeetThePod">
+    <h2>Meet the Pod</h2>
+    <div class="card-container" >
+    {% for item in site.data.fellows %}
+    <div class="card card-pod">
+	<a class="{{ item.page_name }}" href="/projects/user/{{item.page_name}}"></a>
+        <div class="info">
+            <p class="title"> {{ item.name }}</p>
+            <p class="location"> {{ item.location }}</p>
+            <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
+            <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
+            <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
+            <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
         </div>
-        {% endfor %}
     </div>
+    {% endfor %}
+    </div>
+    <script src="/assets/script/script.js"></script>
 </section>
