editing the styles

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -125,6 +125,14 @@ hr {
     text-decoration: none; 
 }
 
+.map-header {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
 @media screen and (max-width: 768px) {
     
     .banner {
