--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,42 +1,63 @@
-
-
-<section id = "MeetThePod">
-    <h2>Meet the Pod</h2>
-    <div class="pod">
-        <div class="conatiner"> 
-          <div class="row">
-    {% for item in site.data.fellows %}
-  
-   
-      <div class="column">
-    <div class="card">
-      <div class="content">
-        <div class="front">
-          <img class="profile" width="100%" src= "{{ item.img }}" >
-          <h2>{{ item.name }}</h2>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.css" />
+</head>
+<section id="MeetThePod">
+  <h2>Meet the Pod</h2>
+  <div class="pod">
+    <div class="container swiper mySwiper">
+      <div class="swiper-wrapper">
+        {% for item in site.data.fellows %}
+        <div class="card swiper-slide">
+          <div class="content">
+            <div class="front">
+              <img class="profile" width="100%" src="{{ item.img }}">
+              <h2>{{ item.name }}</h2>
+            </div>
+            <div class="back from-left">
+              <h2>{{ item.name }}</h2>
+              <p> {{ item.location }}</p>
+              <br>
+              <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
+              <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
+              <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
+              <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
+              <br>
+              <br>
+              <a href="{{ item.social.github }}"><button> Github </button></a>
+            </div>
+          </div>
         </div>
-        <div class="back from-left">
-          <h2>{{ item.name }}</h2>
-          <p> {{ item.location }}</p>
-          <br>
-          <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
-          <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
-          <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
-          <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
-            <br>
-            <br>
-         <a href="{{ item.social.github }}"><button> Github </button></a> 
-        </div>
+        {% endfor %}
       </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
     </div>
   </div>
-
-
-    {% endfor %}
-  </div>
-</div>
-</div>
 </section>
 
- 
-  
+<!-- Swiper  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.min.js"></script>
+
+<script>
+  var swiper = new Swiper(".mySwiper", {
+    observer: true,
+    observeParents: true,
+    slidesPerView: 4,
+    spaceBetween: 30,
+    slidesPerGroup: 4,
+    loop: true,
+    loopFillGroupWithBlank: false,
+    keyboard: {
+      enabled: true,
+    },
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
+    },
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+  });
+</script>
