--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -6,6 +6,7 @@
 @import "footer";
 @import 'blog';
 @import 'blog-list';
+@import 'carousel';
 
 html {
   scroll-behavior: smooth;
@@ -177,7 +178,7 @@ $avatar-size: 20px;
     background-color:#eaeaea;
   }
   .container{
-    width:900px;
+    width:100%;
     margin:0px auto;
   }
   /* Float three columns side by side */
