Remove unnecessary margin in the profile card
Change conflicting class name. Add class to h2 of card so that global h2
styles are not applied to it.

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -10,11 +10,11 @@
         <div class="card swiper-slide">
           <div class="content">
             <div class="front">
-              <img class="profile" width="100%" src="{{ item.img }}">
+              <img class="profile-image" width="100%" src="{{ item.img }}">
               <h2>{{ item.name }}</h2>
             </div>
             <div class="back from-left">
-              <h2>{{ item.name }}</h2>
+              <h2 class="fellow-name">{{ item.name }}</h2>
               <p> {{ item.location }}</p>
               <br>
               <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
