--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -172,14 +172,16 @@ $avatar-size: 20px;
   * {
     box-sizing: border-box;
   }
-  
+
   body {
     font-family: 'Lato', sans-serif;
     background-color:#eaeaea;
   }
-  .container{
-    width:100%;
-    margin:0px auto;
+
+  .container {
+    width: 100%;
+    margin: 0px auto;
+    padding: 1rem;
   }
   /* Float three columns side by side */
   .column {
@@ -188,109 +190,124 @@ $avatar-size: 20px;
     height: 15%;
     padding: 0 10px;
   }
-  
+
   /* Remove extra left and right margins, due to padding */
   .row {margin: 0 -5px;}
-  
+
   /* Clear floats after the columns */
   .row:after {
     content: "";
     display: table;
     clear: both;
   }
-  
+
   /* Responsive columns */
   @media screen and (max-width: 700px) {
-    
-   .container{
-    width: 100%;
-  }
-    
+
+    .container{
+      width: 100%;
+    }
+
     .column {
       width: 100%;
       display: block;
       margin-bottom: 20px;
     }
   }
-  
+
   /* Style the counter cards */
-  .card {
+  .profile-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 5px;
+    // padding: 5px;
     text-align: center;
     background-color: #fff;
-    border-radius:10px;
-    cursor:pointer;
-  }
-  .card .profile{
-     border-radius:10px;
-     transition: 0.2s;
-  }
-  .card:hover .profile{
-    transform:scale(1.4);
-    border-top-right-radius:50px;
-    border-top-left-radius:50px;
-  }
-  
-  .card .content{
-    width:100%;
-    height:100%;
-    position:relative;
-    overflow:hidden;
-  }
-  .card .content .back{
-    position:absolute;
-    width:100%;
-    height:100%;
-    background-color: #f1f1f1e6;
-    transition:1s;
-    
-    z-index:1;
-    padding:10px;
-  }
-  
-  .from-left{
-    top:0;
-    left:-100%;
-  }
-  .card:hover .content .from-left {
-     left:0%;
-  }
-  
-  .card .content .back h3{
-    font-size:15px;
-    letter-spacing:2px;
-  }
-  .card .content .back .tem-img{
-    border-radius:100%;
-  }
-  
-  .card .content .back .des{
-    font-size:13px;
-    padding:20px 0px;
-  }
-  .card .content .back .social-icon{
-    list-style:none;
-    margin:0px;
-    padding:0px;
-  }
-  .card .content .back .social-icon li{
-    display:inline-block;
-  }
-  
-  .card .content .back .social-icon li a{
-    display:block;
-    background:#333;
-    color:#fff;
-    width:40px;
-    height:40px;
-    text-align:center;
-    line-height:40px;
-    border-radius:100%;
-  }
-  
-  .fellow-name {
-    margin: 0;
+    border-radius: 10px;
+    cursor: pointer;
   }
 
+  .profile-card .profile {
+    border-radius: 10px;
+    transition: 0.2s;
+  }
+
+  .profile-card:hover .profile {
+    transform: scale(1.4);
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+  }
+
+  .profile-card .content {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .profile-card .content .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #f1f1f1e6;
+    transition: 1s;
+
+    z-index: 1;
+    padding: 10px;
+  }
+
+  .from-left {
+    top: 0;
+    left: -100%;
+  }
+
+  .profile-card:hover .content .from-left {
+    left: 0%;
+  }
+
+  .profile-card .content .back h3 {
+    font-size: 15px;
+    letter-spacing: 2px;
+  }
+
+  .profile-card .content .back .tem-img {
+    border-radius: 100%;
+  }
+
+  .profile-card .content .back .des {
+    font-size: 13px;
+    padding: 20px 0px;
+  }
+
+  .profile-card .content .back .social-icon {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .profile-card .content .back .social-icon li {
+    display: inline-block;
+  }
+
+  .profile-card .content .back .social-icon li a {
+    display: block;
+    background: #333;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 100%;
+  }
+
+  .fellow-name {
+    margin: 1rem 0rem;
+  }
+
+  #img-container {
+    height: 40vh;
+  }
+
+  #img-container img {
+    height: 100%;
+    object-fit: cover;
+  }
 }
