--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -218,7 +218,6 @@ $avatar-size: 20px;
   /* Style the counter cards */
   .profile-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    // padding: 5px;
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
@@ -247,9 +246,10 @@ $avatar-size: 20px;
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #f1f1f1e6;
+    // background-color: #f1f1f1e6;
+    background: linear-gradient(to bottom, transparent 0%, #f1f1f1e6 50%);
     transition: 1s;
-
+    
     z-index: 1;
     padding: 10px;
   }
