Remove the resume icon

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -22,10 +22,7 @@
               <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
               <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
               <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
-              <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
-              <br>
-              <br>
-              <a href="{{ item.social.github }}"><button> Github </button></a>
+              <a href="{{item.social.github}}" class="fab fa-lg fa-github" target="_blank"></a>
             </div>
           </div>
         </div>
