resolved merge conflicts

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,12 +13,10 @@ layout: default
             {{ page.title }}
         </div>
     </div>
+  </div>
 </div>
 
 <div class="container page">
     {{ content }}
     <a href="/" class ="back-button">&laquo; Back to Pod home</a>
 </div>
-
-
-
