--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -247,7 +247,7 @@ $avatar-size: 20px;
     width: 100%;
     height: 100%;
     // background-color: #f1f1f1e6;
-    background: linear-gradient(to bottom, transparent 0%, #f1f1f1e6 50%);
+    background: linear-gradient(to bottom, transparent 0%, #f1f1f1e6 20%);
     transition: 1s;
     
     z-index: 1;
@@ -309,5 +309,9 @@ $avatar-size: 20px;
   #img-container img {
     height: 100%;
     object-fit: cover;
+  }
+
+  .back {
+    top: 60%;
   }
 }
