Make the carousel responsive

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -56,5 +56,22 @@
       nextEl: ".swiper-button-next",
       prevEl: ".swiper-button-prev",
     },
+    breakpoints: {
+      0: {
+          slidesPerView: 1,
+      },
+      520: {
+          slidesPerView: 2,
+      },
+      770: {
+          slidesPerView: 3,
+      },
+      950: {
+          slidesPerView: 3,
+      },
+      1024: {
+        slidesPerView: 4,
+      }
+    },
   });
 </script>
