Changed colour of scroll bar

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -313,7 +313,7 @@ hr {
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: rgb(77, 50, 226); 
+    background: #1e0070; 
     border-radius: 10px;
   }
   
