--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -181,7 +181,7 @@ $avatar-size: 20px;
   .container {
     width: 100%;
     margin: 0px auto;
-    padding: 1rem;
+    padding: 3rem;
   }
   /* Float three columns side by side */
   .column {
@@ -247,7 +247,7 @@ $avatar-size: 20px;
     width: 100%;
     height: 100%;
     // background-color: #f1f1f1e6;
-    background: linear-gradient(to bottom, transparent 0%, #f1f1f1e6 20%);
+    background: linear-gradient(to bottom, transparent -20%, #5d5d5d 20%);
     transition: 1s;
     
     z-index: 1;
@@ -309,9 +309,11 @@ $avatar-size: 20px;
   #img-container img {
     height: 100%;
     object-fit: cover;
+    border-radius: 10px 10px 0px 0px;
   }
 
   .back {
     top: 60%;
+    color: #f5f5f9;
   }
 }
