--- a/_sass/carousel.scss
+++ b/_sass/carousel.scss
@@ -1,6 +1,15 @@
 .swiper {
     width: 100%;
     height: 100%;
+
+    .swiper-button-next, .swiper-button-prev {
+        color: black;
+        font-weight: bold;
+    }
+
+    .swiper-pagination-bullet-active {
+        background-color: #000;
+      }
 }
 
 .swiper-slide {
