Fix profile images not visible in carousel
The fellow data inconsistency causes image not found error. Fix it by
making it consistent and by updating the image src in description.html

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -11,7 +11,7 @@
           <div class="content">
             <div class="front">
               <div id="img-container">
-                <img class="profile-image" width="100%" src="{{ item.img }}">
+                <img class="profile-image" width="100%" src="assets/img/{{ item.image }}">
               </div>
               <h2 class="fellow-name">{{ item.name }}</h2>
             </div>
