--- a/_includes/description.html
+++ b/_includes/description.html
@@ -16,7 +16,7 @@
               <h2 class="fellow-name">{{ item.name }}</h2>
             </div>
             <div class="back from-left">
-              <p> {{ item.location }}</p>
+              <p> {{ item.city }}</p>
               <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
               <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
               <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
