enchancement: Profile page for each user

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -7,10 +7,10 @@
         <div class="info">
             <p class="title"> {{ item.name }}</p>
             <p class="location"> {{ item.location }}</p>
-            <a href="{{item.url}}" class="fab fa-lg fa-github" target="_blank"></a>
-            <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" target="_blank"></a>
-            <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" target="_blank"></a>
-            <a href="{{item.resume}}" class="fas fa-lg fa-file" target="_blank"></a>
+            <a href="{{item.url}}" class="fab fa-lg fa-github" style="color:black;" target="_blank"></a>
+            <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" style="color:black;" target="_blank"></a>
+            <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" style="color:black;" target="_blank"></a>
+            <a href="{{item.resume}}" class="fas fa-lg fa-file" style="color:black;" target="_blank"></a>
         </div>
     </div>
     {% endfor %}
