Fix groupview of cards on mobile

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -59,18 +59,19 @@
     breakpoints: {
       0: {
           slidesPerView: 1,
+          slidesPerGroup: 1,
       },
       520: {
           slidesPerView: 2,
+          slidesPerGroup: 2,
       },
       770: {
           slidesPerView: 3,
-      },
-      950: {
-          slidesPerView: 3,
+          slidesPerGroup: 3,
       },
       1024: {
         slidesPerView: 4,
+        slidesPerGroup: 4,
       }
     },
   });
