resolved log errors

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,6 +1,4 @@
 
-
-
 <h1 class="map-header">Map</h1>
 <div id="map" ></div>
 <h1>Map</h1>
@@ -21,7 +19,7 @@ function initMap() {
     fellows.forEach(fellow => {
 
         let icon={
-            url: `/assets/img/${fellow.img}`,
+            url: `/assets/img/${fellow.image}`,
             size: new google.maps.Size(71, 71),
             origin: new google.maps.Point(0, 0),
             anchor: new google.maps.Point(17, 34),
