added map and the styles for the map

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -112,6 +112,12 @@ hr {
     height: 41px;
 }
 
+#map{
+    height: 400px;
+    width: 70%;
+    margin: 0 auto;
+}
+
 @media screen and (max-width: 768px) {
     
     .banner {
