--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -118,6 +118,13 @@ hr {
     margin: 0 auto;
 }
 
+.map-header{
+    text-align: center;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 20px 0 ;
+}
+
 @media screen and (max-width: 768px) {
     
     .banner {
