--- a/_includes/description.html
+++ b/_includes/description.html
@@ -2,16 +2,18 @@
     <h2>Meet the Pod</h2>
     <div class="card-container" >
     {% for item in site.data.fellows %}
-    <div class="card card-pod">
-	<a class="{{ item.page_name }}" href="/projects/user/{{item.page_name}}"></a>
+    <div class="card card-pod" style="border-radius: 10px;">
+    <div class="column"><img src="/assets/img/{{item.image}}" class="rounded-circle" width="100" height="100" alt=""></div>
+    <div class="column">
         <div class="info">
-            <p class="title"> {{ item.name }}</p>
+            <p class="title"><a href="/projects/user/{{item.page_name}}" style="color: black;"> {{ item.name }}</a></p>
             <p class="location"> {{ item.location }}</p>
-            <a href="{{item.url}}" class="fab fa-lg fa-github" style="color:black;" target="_blank"></a>
-            <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" style="color:black;" target="_blank"></a>
-            <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" style="color:black;" target="_blank"></a>
+            <a href="{{item.url}}" class="fab fa-lg fa-github" style="color:black;" target="{{item.github}}"></a>
+            <a href="{{item.social.linkedIn}}" class="fab fa-lg fa-linkedin" style="color:black;" target="{{item.linkedin}}"></a>
+            <a href="{{item.social.twitter}}" class="fab fa-lg fa-twitter" style="color:black;" target="{{item.twitter}}"></a>
             <a href="{{item.resume}}" class="fas fa-lg fa-file" style="color:black;" target="_blank"></a>
         </div>
+    </div>
     </div>
     {% endfor %}
     </div>
