--- a/_layouts/user.html
+++ b/_layouts/user.html
@@ -3,7 +3,7 @@ layout: page
 ---
 <link lang='sass' rel="stylesheet" href="/assets/css/main.css">
 <div class="profile-page">
- <div class="page-header header-filter" data-parallax="true" style="background-image:url('/assets/img/mlh.jpg');"></div>
+ <!-- <div class="page-header header-filter" data-parallax="true" style="background-image:url('/assets/img/mlh.jpg');"></div> -->
     <div class="main main-raised">
 		<div class="profile-content">
             <div class="container">
