--- a/_sass/user.scss
+++ b/_sass/user.scss
@@ -29,6 +29,7 @@ a .material-icons {
 
 .profile-page .page-header {
     height: 380px;
+    padding-top: 50px;
     background-position:center;
 }
 
@@ -58,7 +59,7 @@ a .material-icons {
 }
 
 .main-raised {
-    margin: -60px 30px 0;
+    margin: 30px 0;
     border-radius: 6px;
     box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
 }
