--- a/_layouts/user.html
+++ b/_layouts/user.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<link lang='sass' rel="stylesheet" href="/assets/css/main.css">
+<link lang='sass' rel="stylesheet" href="/assets/css/user.css">
 <div class="profile-page">
  <!-- <div class="page-header header-filter" data-parallax="true" style="background-image:url('/assets/img/mlh.jpg');"></div> -->
     <div class="main main-raised">
