--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -113,16 +113,25 @@ hr {
 }
 
 #map{
+    margin : 0 auto;
+    border: 5px solid #022c67;
+    padding: 50px 0;
     height: 400px;
+    width: 100%;
     width: 70%;
-    margin: 0 auto;
+
+}
+
+#map a:hover{
+    text-decoration: none; 
 }
 
 .map-header{
     text-align: center;
     font-size: 32px;
     font-weight: bold;
-    margin: 20px 0 ;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
 @media screen and (max-width: 768px) {
