--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -5,10 +5,10 @@
 @import "profile";
 @import "page";
 @import "footer";
-@import 'blog';
-@import 'blog-list';
-@import 'carousel';
-@import 'user';
+@import "blog";
+@import "blog-list";
+@import "carousel";
+@import "user";
 
 html {
   scroll-behavior: smooth;
@@ -166,15 +166,14 @@ $avatar-size: 20px;
   font-weight: 500;
 }
 
-.pod{
-
+.pod {
   * {
     box-sizing: border-box;
   }
 
   body {
-    font-family: 'Lato', sans-serif;
-    background-color:#eaeaea;
+    font-family: "Lato", sans-serif;
+    background-color: #eaeaea;
   }
 
   .container {
@@ -191,7 +190,9 @@ $avatar-size: 20px;
   }
 
   /* Remove extra left and right margins, due to padding */
-  .row {margin: 0 -5px;}
+  .row {
+    margin: 0 -5px;
+  }
 
   /* Clear floats after the columns */
   .row:after {
@@ -202,8 +203,7 @@ $avatar-size: 20px;
 
   /* Responsive columns */
   @media screen and (max-width: 700px) {
-
-    .container{
+    .container {
       width: 100%;
     }
 
@@ -248,7 +248,7 @@ $avatar-size: 20px;
     // background-color: #f1f1f1e6;
     background: linear-gradient(to bottom, transparent -20%, #5d5d5d 20%);
     transition: 1s;
-    
+
     z-index: 1;
     padding: 10px;
   }
@@ -346,8 +346,8 @@ $avatar-size: 20px;
   &:hover,
   &:focus {
     border-radius: 8px;
-  background: #133667;
-  transition: all 2s ease-in-out;
+    background: #133667;
+    transition: all 2s ease-in-out;
   }
 }
 
@@ -371,3 +371,6 @@ $avatar-size: 20px;
   }
 }
 
+nav {
+  z-index: 100000 !important;
+}
