add map to navbar and changed the heading of map

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,7 +23,7 @@
         <a class="nav-link" href="#blog">Blogs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#Map">Maps</a>
+        <a class="nav-link" href="#map">Maps</a>
       </li>
     </ul>
     <div class="color-mode" onclick="toggleTheme()"></div>
