--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -119,6 +119,7 @@ hr {
     height: 400px;
     width: 100%;
     width: 70%;
+    margin-bottom: 30px;
 
 }
 
@@ -129,7 +130,6 @@ hr {
 .map-header{
     text-align: center;
     font-size: 32px;
-    font-weight: bold;
     margin-top: 20px;
     margin-bottom: 15px;
 }
