--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,6 +1,9 @@
 
-<h1 class="map-header">Map</h1>
-<div id="map" ></div>
+
+<div>
+    <h1 class="map-header">Where do our fellows live?🗺️</h1>
+    <div id="map" ></div>    
+</div>
 
 
 <script>
